
   - Reenable C Zope security policy by implementing recent Python
     changes in C, bringing the Python and C implementations back in
     sync.  See lib/python/AccessControl/ZopeSecurityPolicy.py.

   - Change acquisition wrappers to implement the descr get slot
     directly, thus speeding the use of the slot.

   - Collector #1233: port ZOPE_CONFIG patch from Zope 2.7 to Zope 2.8


  Zope 2.9.0 beta 2 (2005/12/24)

    Bugs fixed

      - Collector #1939: When running as a service, Zope could
        potentially collect too much log output filling the NT Event
        Log. When that happened, a 'print' during exception handling
        would cause an IOError in the restart code causing the service
        not to restart automatically.

        Problem is that a service/pythonw.exe process *always* has an
        invalid sys.stdout.  But due to the magic of buffering, small
        "print" statements would not fail - but once the file actually
        got written to, the error happened.  Never a problem when
        debugging, as the process has a console, and hence a valid
        stdout.

     - For content-type HTTP headers starting with 'text/' or 'application/'
       the 'charset' field is automatically if not specified by the
       application. The 'charset' is determined by the content-type header
       specified by the application (if available) or from the
       zpublisher_default_encoding value as configured in etc/zope.conf

     - Collector #1976: FTP STOR command would load the file being
       uploaded in memory. Changed to use a TemporaryFile.

     - OFS ObjectManager: Fixed list_imports() to tolerate missing
       import directories.

     - Collector #1965: 'get_transaction' missing from builtins without
       sufficient deprecation notice (ZODB 3.6 properly removed it, but
       Zope needs to keep it for another release).

     - Several zope.app packages were forgotten to be included in the